--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,70 +2,56 @@
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
 
-
-
-
-
 /// Regular font family
-/// @type List
-$text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
+$main-font-family: 'Cabin', sans-serif;
 
 /// Code (monospace) font family
-/// @type List
-$code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
+$code-font-stack: 'Courier New', 'DejaVu Sans Mono',
+	'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
 
+/// Font Sizes
+$h1-desktop: 4rem;
+$h2-desktop: 3.2rem;
+$h3-desktop: 2.8rem;
+$h4-desktop: 2.4rem;
+$h5-desktop: 2rem;
+$h6-desktop: 1.6rem;
 
+$p-desktop: 1.6rem;
+$p-small-desktop: 1.4rem;
 
+/// Colors
+$transparent: rgba(0, 0, 0, 0);
+$white: #ffffff;
+$black: #000000;
 
+// Grays
+$text-gray: #c7c7c7;
+$dark-text-gray: #595c61;
+$main-gray: #41464e;
+$dark-gray: #2a2d33;
+$darkest-gray: #282b31;
 
-/// Copy text color
-/// @type Color
-$text-color: rgb(34, 34, 34) !default;
+// Reds
+$red: #c75454;
 
-/// Main brand color
-/// @type Color
-$brand-color: rgb(229, 0, 80) !default;
-
-/// Light grey
-/// @type Color
-$light-grey: rgb(237, 237, 237) !default;
-
-/// Medium grey
-/// @type Color
-$mid-grey: rgb(153, 153, 153) !default;
-
-/// Dark grey
-/// @type Color
-$dark-grey: rgb(68, 68, 68) !default;
-
-
-
-
+/// Margins / Paddings
+$nav-padding: 16px 40px;
 
 /// Container's maximum width
-/// @type Length
-$max-width: 1180px !default;
-
-
-
-
+$max-width: 1600px !default;
 
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
 /// @prop {Map} values - Values are actual breakpoints expressed in pixels
 $breakpoints: (
-  'small': 320px,
-  'medium': 768px,
-  'large': 1024px,
+	'small': 320px,
+	'medium': 768px,
+	'large': 1024px,
 ) !default;
-
-
-
-
-
 
 /// Relative or absolute URL where all assets are served from
 /// @type String
 /// @example scss - When using a CDN
-///   $base-url: 'http://cdn.example.com/assets/';
+/// $base-url: 'http://domain.com/assets/';
 $base-url: '/assets/' !default;
