--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,3 +1,4 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap');
