--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -25,11 +25,6 @@ html {
  * Basic styles for links
  */
 a {
-	color: $brand-color;
+	color: $black;
 	text-decoration: none;
-
-	@include on-event {
-		color: $text-color;
-		text-decoration: underline;
-	}
 }
