--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,18 @@
 @charset "UTF-8";
 
 // 1. Configuration and helpers
+@import 'abstracts/variables';
 @import 'abstracts/mixins';
+@import 'abstracts/functions';
 
 // 2. Vendors
 @import 'vendors/normalize';
 
 // 3. Base stuff
+@import 'base/fonts';
 @import 'base/helpers';
+@import 'base/typography';
+@import 'base/base';
 
 // 4. Layout-related sections
 @import 'layout/footer';
