Firestore config done

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,6 +20,10 @@ html {
 *::after {
 	box-sizing: inherit;
 }
+body {
+	background: $main-gray;
+	color: $white;
+}
 
 /**
  * Basic styles for links
