--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,7 +15,8 @@
 @import 'base/base';
 
 // 4. Layout-related sections
-@import 'layout/footer';
+@import 'layout/header';
+@import 'layout/sidebar';
 
 // 5. Components
 @import 'components/button';
