--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -13,3 +13,8 @@
 	justify-content: center;
 	align-items: center;
 }
+@mixin flex-between {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
