Success alert component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 // 5. Components
 @import 'components/elements/button';
 @import 'components/addNewsBar';
+@import 'components/alert';
 
 // 6. Page-specific styles
 @import 'pages/home';
