No news message

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,8 @@
 @import 'components/elements/button';
 @import 'components/addNewsBar';
 @import 'components/alert';
+@import 'components/allNews';
+@import 'components/singleNews';
 
 // 6. Page-specific styles
 @import 'pages/home';
