--- a/src/scss/components/_addNewsBar.scss
+++ b/src/scss/components/_addNewsBar.scss
@@ -10,8 +10,10 @@
 	@include flex-between;
 	padding: 1.6rem 2.4rem 1.1rem 2.4rem;
 	@include trans;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 	&.raised {
 		bottom: 0;
+		box-shadow: 0px -1px 20px rgba(0, 0, 0, 0.4);
 	}
 }
 .AddNewsBar__input {
