--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,6 +4,12 @@
 	color: $white;
 	padding: 0 3.2rem;
 	height: 8rem;
+	position: sticky;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 20;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 .Header__title {
 	font-size: $h2-desktop;
