Text area controls

--- a/src/scss/components/_addNewsBar.scss
+++ b/src/scss/components/_addNewsBar.scss
@@ -59,3 +59,13 @@
 		left: 0;
 	}
 }
+.AddNewsBar__controls {
+	position: absolute;
+	top: -3.4rem;
+	right: 0;
+	p {
+		font-size: 1.2rem;
+		text-align: right;
+		margin-bottom: 0.2rem;
+	}
+}
