--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -1,10 +1,11 @@
 .Alert {
 	position: absolute;
 	background: $darkest-gray;
-	left: 10.4rem;
+	left: 50%;
+	transform: translateX(-50%);
 	top: 10rem;
 	border-radius: 0.5rem;
-	padding: 0.8rem 10rem 0.8rem 2.4rem;
+	padding: 0.8rem 2.4rem 0.8rem 2.4rem;
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 	animation: slideInAndLeave 1.5s ease-in-out forwards;
 	z-index: 100;
