--- a/src/scss/components/_singleNews.scss
+++ b/src/scss/components/_singleNews.scss
@@ -1,4 +1,5 @@
 .SingleNews {
+	position: relative;
 	margin-bottom: 1.6rem;
 	background: $dark-gray;
 	padding: 1.6rem;
@@ -10,6 +11,9 @@
 	}
 	&:last-child {
 		margin-bottom: 0;
+	}
+	&:hover .SingleNews__delete {
+		display: block;
 	}
 }
 @keyframes fadeIn {
@@ -35,4 +39,33 @@
 }
 .SingleNews__footer--author {
 	font-weight: 500;
+}
+.SingleNews__deleteWrapper {
+	position: absolute;
+	top: 0;
+	right: -6rem;
+	width: 4rem;
+	transform: translate(-50%);
+	height: 100%;
+	@include flex-center;
+	&:hover .SingleNews__delete {
+		display: block;
+	}
+}
+.SingleNews__delete {
+	color: $red;
+	font-size: $p-desktop;
+	display: none;
+	animation: 0.2s ease-in-out simpleFadeIn forwards;
+	&:hover {
+		cursor: pointer;
+	}
+}
+@keyframes simpleFadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
