--- a/src/scss/components/_singleNews.scss
+++ b/src/scss/components/_singleNews.scss
@@ -4,7 +4,6 @@
 	background: $dark-gray;
 	padding: 1.6rem;
 	border-radius: 0.5rem;
-	color: $text-gray;
 	animation: 0.6s ease-in-out fadeIn forwards;
 	&:first-child {
 		margin-top: 3.2rem;
@@ -14,6 +13,9 @@
 	}
 	&:hover .SingleNews__delete {
 		display: block;
+	}
+	&:hover .SingleNews__footer--pin {
+		opacity: 1;
 	}
 }
 @keyframes fadeIn {
@@ -33,12 +35,26 @@
 		opacity: 1;
 	}
 }
+.SingleNews__text {
+	color: $white;
+}
 .SingleNews__footer {
 	margin-top: 3.2rem;
 	@include flex-between;
 }
 .SingleNews__footer--author {
-	font-weight: 500;
+	font-size: 1.4rem;
+}
+.SingleNews__footer--pin {
+	text-transform: uppercase;
+	font-size: 1.2rem;
+	opacity: 0;
+	&:hover {
+		cursor: pointer;
+	}
+	span {
+		margin-left: 0.5rem;
+	}
 }
 .SingleNews__deleteWrapper {
 	position: absolute;
