--- a/src/scss/components/_singleNews.scss
+++ b/src/scss/components/_singleNews.scss
@@ -18,6 +18,10 @@
 		opacity: 1;
 	}
 }
+.SingleNews__text {
+	color: $white;
+	animation: 0.6s ease-in-out fadeIn forwards;
+}
 @keyframes fadeIn {
 	0% {
 		opacity: 0;
@@ -34,9 +38,6 @@
 		color: $text-gray;
 		opacity: 1;
 	}
-}
-.SingleNews__text {
-	color: $white;
 }
 .SingleNews__footer {
 	margin-top: 3.2rem;
@@ -84,4 +85,11 @@
 	to {
 		opacity: 1;
 	}
+}
+.SinglePinnedNews {
+	max-width: 35vw;
+	min-width: 35vw;
+	margin: 0 auto;
+	position: sticky;
+	top: 9.6rem;
 }
